[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = -3.0
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 49.0
margin_top = 830.0
margin_right = 681.0
margin_bottom = 1379.0

[node name="ForwardButton" type="Button" parent="Control"]
margin_left = 49.0
margin_top = 65.0
margin_right = 166.0
margin_bottom = 180.0
text = "^"

[node name="StopButton" type="Button" parent="Control"]
margin_left = 49.0
margin_top = 215.0
margin_right = 166.0
margin_bottom = 330.0
text = "stop"

[node name="BackButton" type="Button" parent="Control"]
margin_left = 49.0
margin_top = 359.0
margin_right = 166.0
margin_bottom = 474.0
text = "v"

[node name="RightButton" type="Button" parent="Control"]
margin_left = 459.0
margin_top = 215.0
margin_right = 576.0
margin_bottom = 330.0
text = ">"

[node name="LeftButton" type="Button" parent="Control"]
margin_left = 299.0
margin_top = 215.0
margin_right = 416.0
margin_bottom = 330.0
text = "<"

[node name="Label" type="Label" parent="."]
margin_left = 137.0
margin_top = 382.0
margin_right = 198.0
margin_bottom = 396.0
rect_scale = Vector2( 2.48616, 2.48616 )
text = "Server IP:"

[node name="LineEdit" type="LineEdit" parent="Label"]
margin_left = 80.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
text = "127.0.0.1"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 10

[connection signal="pressed" from="Control/ForwardButton" to="." method="_on_ForwardButton_pressed"]
[connection signal="pressed" from="Control/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="Control/LeftButton" to="." method="_on_LeftButton_pressed"]
